--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-loader-spinner": "^3.1.5",
+    "react-query": "^0.3.24",
     "react-scripts": "3.3.0"
   },
   "scripts": {
